--- a/som/report.Rmd
+++ b/som/report.Rmd
@@ -4,12 +4,13 @@ author: "Łukasz Knigawka, Bazyli Reps"
 output: pdf_document
 ---
 
-Dokument przedstawia zastosowanie map samoorganizujących na danych giełdowych. Wykorzystano dane giełdowe z początku maja 2020, czyli obserwacje z czasów pandemii koronawirusa. Do pobrania danych wykorzystano bibliotekę quantmod. Analizie poddano dane spółek Amazon (AMZN), Apple (AAPL), Uber (UBER), Netflix (NFLX), Spotify (SPOT).
+Dokument przedstawia zastosowanie map samoorganizujących na danych giełdowych. Wykorzystano dane giełdowe od początku stycznia do końcówki maja 2020, czyli obserwacje z czasów pandemii koronawirusa. Do pobrania danych wykorzystano bibliotekę quantmod. Analizie poddano dane 20. wielkich amerykańskich spółek technologicznych, w tym Amazon (AMZN), Apple (AAPL), Uber (UBER), Netflix (NFLX), Spotify (SPOT).
 
 Mapy samoorganizujące to sieci neuronów, z którymi są stowarzyszone współrzędne na prostej, płaszczyźnie lub w dowolnej n-wymiarowej przestrzeni. Uczenietego tego rodzaju sieci polega na zmianach współrzędnych neuronów, tak, by dążyły one do wzorca zgodnego ze strukturą analizowanych danych. Sieci zatem „rozpinają się” wokół zbiorów danych, dopasowując do nich swoją strukturę. Sieci te klasyfikują wielowymiarowe dane wejściowe w taki sposób, by możliwa była ich reprezentacji w mniejszej ilości wymiarów - przeważnie dwóch - przy jednoczesnym jak najwierniejszym odwzorowaniu struktury wewnętrznej wektora wejściowego.
 
 
 ```{r}
+
 if (!require("quantmod")) {
     install.packages("quantmod")
     library(quantmod)
@@ -18,27 +19,33 @@ if (!require("kohonen")) {
     install.packages("kohonen")
     library(kohonen)
 }
+library(dplyr)
+```
+
+Pobierzmy dane z 4. miesięcy.
+
+```{r}
+
+start <- as.Date("2020-01-01")
+end <- as.Date("2020-05-01")
+
+companies <- c("AMZN", "AAPL", "UBER", "NFLX", "SPOT", "MSFT", "GOOG", "FB", "BABA", "INTC", "NVDA", "PYPL", "TSLA", "ATVI", "YELP", "MU", "ISRG", "EA", "CRM", "AMD")
+fullnames <- c("Amazon.com", "Apple", "Uber Technologies", "Netflix", "Spotify Technology", "Microsoft Corporation", "Alphabet", "Facebook", "Alibaba Group", "Intel", "Nvidia", "PayPal", "Tesla", "Activision Blizzard", "Yelp,", "Micron Technology", "Intuitive Surgical", "Electronic Arts", "Salesforce.com ", "Advanced Micro Devices")
+
+getSymbols(companies, from = start)
+head(AMZN)
+companies <- as.list(companies)
 ```
 
 Sprawdźmy, jak prezentowały się przez wybrane 4 miesiące kursy wybranych spółek.
 
 ```{r}
-start <- as.Date("2020-01-01")
-end <- as.Date("2020-05-01")
 
-getSymbols("AMZN", src = "yahoo", from = start, to = end)
-getSymbols("AAPL", src = "yahoo", from = start, to = end)
-getSymbols("UBER", src = "yahoo", from = start, to = end)
-getSymbols("NFLX", src = "yahoo", from = start, to = end)
-getSymbols("SPOT", src = "yahoo", from = start, to = end)
-head(SPOT)
-```
-```{r}
-plot(AMZN[, "AMZN.Close"], main = "AMZN")
-plot(AAPL[, "AAPL.Close"], main = "AAPL")
-plot(UBER[, "UBER.Close"], main = "UBER")
-plot(NFLX[, "NFLX.Close"], main = "NFLX")
-plot(SPOT[, "SPOT.Close"], main = "SPOT")
+for (company in companies) {
+  col <- paste(company, "Close", sep=".")
+  print(plot(get(company)[, col], main = company))
+}
+
 ```
 
 Możemy zaobserwować, że wszystkie wybrane spółki znacznie odczuły marcowe załamanie giełdowe. Niektóre z nich (Netflix, Amazon) zanotowały wkrótce wzrost wartości do poziomu wyższego niż przed załamaniem, podczas gdy inne nie wróciły na dawny poziom.
@@ -53,43 +60,76 @@ head(stocks)
 plot(as.zoo(stocks), screens = 1, lty = 1:5, xlab = "Date", ylab = "Price", col = topo.colors(10))
 legend("right", c("AMZN", "AAPL", "UBER", "NFLX", "SPOT"), lty = 1:3, cex = 0.5, col = topo.colors(10))
 ```
-```{r}
-head(AMZN, 10)
-```
 
 Przeskalowano dane przed wykorzystaniem ich do analizy map samoorganizujących. Do wykonania analizy wykorzystano bibliotekę kohonen.
 
 ```{r}
-AMZN.measures <- c("Open, High, Low, Close, Volume, Adjusted")
-AMZN.sc = scale(AMZN[, 1:6])
-head(AMZN.sc)
-```
-```{r}
-AMZN.grid = somgrid(xdim = 7, ydim=7, topo="hexagonal")
-AMZN.som = som(AMZN.sc, grid=AMZN.grid, rlen=100, alpha=c(0.05,0.01))
+
+CORPS <- data.frame(AMZN[, 4], SPOT[, 4], AAPL[, 4], UBER[, 4], NFLX[, 4], ATVI[, 4], BABA[, 4], CRM[, 4], EA[, 4], FB[, 4], GOOG[, 4], INTC[, 4], ISRG[, 4], MSFT[, 4], MU[, 4], NVDA[, 4], PYPL[, 4], TSLA[, 4], YELP[, 4], AMD[, 4])
+
+CORPS <- as.data.frame(t(as.matrix(CORPS)))
+
+CORPS.sc = scale(CORPS)
+head(CORPS.sc)
+
+CORPS.grid = somgrid(xdim = 4, ydim=5, topo="hexagonal")
+CORPS.som = som(CORPS.sc, grid=CORPS.grid, rlen=100, alpha=c(0.05,0.01))
+
 ```
 Sprawdżmy jak przebiegał proces treningowy. Wraz z następowaniem kolejnych iteracji procesu uczenia, dystans między neuronami zmniejszał się. Możliwe że model jest nieco niedotrenowany, gdyż widzimy, że odległość maleje wciąż przy setnej oteracji.
 ```{r}
-plot(AMZN.som, type="changes")
+plot(CORPS.som, type="changes")
 ```
 
-Pakiet kohonen umożliwia przedstawienie wykresu na którym widać, ile obserwacji trafiło do której komórki.
+Pakiet kohonen umożliwia przedstawienie wykresu na którym widać, ile obserwacji trafiło do której komórki. Wydaje się, że dość dobrze dobrano wielkość macierzy, gdyż większość z węzłów zawiera po 5-10 przypadków. Puste węzły świadzyłyby o zbyt dużej mapie, natomiast zbyt duża liczba przypisań w węzłach o za małej mapie.
 
 ```{r}
-plot(AMZN.som, type="count")
+plot(CORPS.som, type="count")
 ```
 
-Poniższy wykres przedstawia odległości komórek od najbliższych sąsiadów. Taka wizualizaca nosi także nazwę U-macierzy.
+Poniższy wykres przedstawia odległości komórek od najbliższych sąsiadów. Taka wizualizaca nosi także nazwę U-macierzy. Obszary z wyższymi wartościami charakteryzują węzły, które są bardziej niepodobne, a obszary z mniejszymi wartościami charakteryzują podobne węzły. Widzimy powstałe granice. U-macierze mogą służyć do dokonywania klasteryzacji.
 
 ```{r}
-plot(AMZN.som, type="dist.neighbours")
+plot(CORPS.som, type="dist.neighbours")
+```
+
+```{r}
+plot(CORPS.som, type = "mapping", main = "Mapping Type SOM", pchs = 20)
 ```
 
 Poniższy wykres przedstawia charakterystykę obserwacji znajdujących się w danych komórkach.
 
 ```{r}
-plot(AMZN.som, type="codes")
+plot(CORPS.som, type="codes")
+
+for (i in 1:length(companies)) {
+  print(paste(companies[i], CORPS.som$unit.classif[i], fullnames[i]))
+}
+
 ```
 
 
 
+
+```{r}
+
+CORPS <- data.frame(AMZN[, 4], SPOT[, 4], AAPL[, 4], UBER[, 4], NFLX[, 4], ATVI[, 4], BABA[, 4], CRM[, 4], EA[, 4], FB[, 4], GOOG[, 4], INTC[, 4], ISRG[, 4], MSFT[, 4], MU[, 4], NVDA[, 4], PYPL[, 4], TSLA[, 4], YELP[, 4], AMD[, 4])
+
+CORPS.sc = scale(CORPS)
+head(CORPS.sc)
+
+CORPS.grid = somgrid(xdim = 4, ydim=5, topo="hexagonal")
+CORPS.som = som(CORPS.sc, grid=CORPS.grid, rlen=100, alpha=c(0.05,0.01))
+
+plot(CORPS.som, type="changes")
+
+plot(CORPS.som, type="count")
+
+plot(CORPS.som, type="dist.neighbours")
+
+plot(CORPS.som, type = "mapping", main = "Mapping Type SOM", pchs = 20)
+
+plot(CORPS.som, type="codes")
+
+
+```
